--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,7 @@ html,
 body {
   padding: 0;
   margin: 0;
+  /* max-width: 100vh; */
   font-family: 'Noto Sans', sans-serif;
   background-color: var(--color-bg);
   color: var(--color-text);
@@ -20,8 +21,6 @@ body {
   /* display: grid; */
   /* grid-template-columns: repeat(12, 10fr); */
 }
-
-
 
 main {
   padding: 1rem 10vw;
@@ -90,16 +89,41 @@ code {
   font-weight: bold;
   border-bottom: 1px solid var(--color-gray);
   z-index: 99;
+
+  display: block;
 }
 
-.navbar .right {
-  position: static;
+.navbar li > button {
+  display: inline;
+
+  display: block;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+
+  justify-content: flex-end;
 }
 
 .navbar ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  overflow: hidden;
+}
+
+.navbar .right {
+  float:right;
+  /* justify-self: flex-start; */
+  padding: 2px;
+  /* position: static; */
+  /* padding-right: calc(100vw - 600px); */
+}
+
+.navbar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  /* display:block; */
   display: flex;
   align-items: center;
   justify-content: space-between;
