--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,9 @@
+.container {
+  max-width: 100vw;
+  /* display: grid; */
+  /* grid-template-columns: repeat(6, 1fr); */
+}
+
 .title a {
   color: #0070f3;
   text-decoration: none;
