--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,13 @@
+@import url("https://use.typekit.net/jmk3xov.css");
+
+.threeD {
+  position: fixed;
+  top: 0;
+  left: 0;
+  max-width: 100vw !important;
+}
+
+
 .container {
   max-width: 100vw;
   /* display: grid; */
